fixed overflow issue with title

--- a/style.css
+++ b/style.css
@@ -138,16 +138,8 @@ html,
   height: 200px;
   padding: 10px;
   line-height: 40px;
-  overflow: auto;
-}
-
-.book-title {
-  font-size: 22px;
-  letter-spacing: 1.5px;
-}
-
-.book-author {
-  font-size: 17px;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 #book-delete {
@@ -164,5 +156,5 @@ html,
 }
 
 .card-content {
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
 }
